Thu Jan 25 02:43:28 2007  Tim Janik  <timj@gtk.org>

	* tests/threads.cc: give up CPU if ring buffer reader/writer
	are busy spinning. this speeds up tests on single-CPU systems
	significantly.

Thu Jan 25 02:03:37 2007  Tim Janik  <timj@gtk.org>

	* birnetthread.[hc]*: sink & ref threads around run() to keep the Thread
	structure alive. added Thread::Self::yield().
	added Atomic::RingBuffer<>, a simple 1-reader/1-writer ring bufferthat
	does atomic reads/writes without needing mutexes.

	* tests/threads.cc: added atomic ring buffer tests.
	test_deletable_destruction(): shutup old debug output.
	main(): always run quick tests.

Sat Jan 20 17:41:06 2007  Tim Janik  <timj@gtk.org>

	* birnetthread.hh: fixed volatile pointer attribute to apply to the
	pointer value. 

	* birnetutils.cc: changed DeletionHook linking to form a ring. added
	an assertion to ~DeletionHook() that *this was unlinked before being
	destroyed. changed deletable_maps[] implementation to be created
	atomically on demand and never be destroyed. this fixes problems with
	unpredictable constructor/destructor ordering.

Fri Jan 19 01:48:22 2007  Tim Janik  <timj@gtk.org>

	* birnetutils.hh, birnetutils.cc: call monitoring_deletable()
	when deletion hooks are added to deletables, renamed
	dismiss_deletable() method.

	* birnetsignalslot.hh: adapted DeletionHook methods.

	* tests/threads.cc: added deletion hook test cases.

Wed Jan 17 02:30:35 2007  Tim Janik  <timj@gtk.org>

	* examples/mkhost.sh: added a small script to set up an example project
	that configures, builds and tests (via make check) a birnet/ subdir.

Wed Jan 17 02:28:18 2007  Tim Janik  <timj@gtk.org>

	* Makefile.am: define _BIRNET_SOURCE_EXTENSIONS, so birnet extensions
	can be used internally.

Wed Jan 17 02:19:56 2007  Tim Janik  <timj@gtk.org>

	* COPYING.LGPL: explicitely include Birnet license, GNU LGPL.

Thu Jan  4 21:53:56 2007  Tim Janik  <timj@gtk.org>

	* birnetthread.hh: